# iThome2023-FastAPI-Tutorial

./: .gitignore  Day01.md  Day02.md  Day03.md  Day04.md  Day05.md  Day06.md  Day07.md  Day08.md  Day09.md  Day10.md  Day11.md  Day12.md  Day13.md  Day14.md  Day15.md  Day16.md  Day17.md  Day18.md  Day19.md  Day20.md  Day21.md  Day22.md  Day23.md  Day24.md  Day25.md  Day26.md  Day27.md  Day28.md  Day29.md  Day30.md  Day31.md  Day32.md  Makefile  README.md  db.mysql.env  db.postgresql.env  docker-compose-primary-replica.yml  docker-compose-prod.yml  docker-compose.yml  (+3 more)
.github/workflows/: docker-image.yml
PydanticExample/: test.py
backend/: .dockerignore  Dockerfile  main.py  manage_worker.py  requirements.txt  run.py
backend/.env/: .dev.env  .mq.env  .primary-replica.env  .prod.env
backend/api/: auth.py  depends.py  infor.py  items.py  me.py  stt.py  users.py
backend/auth/: jwt.py  passwd.py  utils.py
backend/cache/: redis_cahe.py  redis_pool.py
backend/crud/: items.py  users.py
backend/database/: generic.py  injection.py  primary_replica.py  redis_cahe.ok.py  redis_cahe.py  redis_cahe_ok.py
backend/jobs/: stt.py
backend/models/: base.py  item.py  user.py
backend/schemas/: auth.py  items.py  users.py
backend/setting/: .env.dev  .env.primary-replica  .env.prod  .env.test  config.py
backend/tests/: app.py  conftest.py  (+10 more)
frontend/: app.py  run.py
jekins/: Dockerfile  jenkins-setup.sh
primary-replica/: db.env  db.primary.env  db.replica1.env  db.replica2.env  pg_hba.conf  postgresql.conf  reset.sh  setup.sh  test.sh
syntax_review/: typing.py
(+14 files in other folders)
