[tool.poetry]
name = "ithome2023-fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["jason810496 <810496@email.wlsh.tyc.edu.tw>"]
readme = "README.md"
packages = [{include = "ithome2023_fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
pymysql = "^1.1.0"
cryptography = "^41.0.4"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
pytest-sugar = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
